tests/generics/03-duplicate.stderr
error: Generic `<const D : usize>` already declared.
 --> $DIR/03-generic_overload.rs:3:29
  |
3 | struct Test<const D: usize, const D: usize> {}
  |                             ^^^^^
